cluster/paperless/deployment-gotenberg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg-deployment
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-gotenberg
  template:
    metadata:
      labels:
        app: paperless-gotenberg
    spec:
      nodeSelector:
        role: apps
      containers:
        - name: gotenberg
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/gotenberg/gotenberg:8.37
          command: ["gotenberg", "--chromium-disable-javascript=true", "--chromium-allow-list=file:///tmp/.*"]
          ports:
            - containerPort: 3000
