cluster/paperless/deployment-tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-tika-deployment
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-tika
  template:
    metadata:
      labels:
        app: paperless-tika
    spec:
      nodeSelector:
        role: apps
      containers:
        - name: tika
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/apache/tika:3.3.1.0
          ports:
            - containerPort: 9998
