cluster/paperless/service-gotenberg.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg-service
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless-gotenberg
  ports:
    - port: 3000
      protocol: TCP
