cluster/paperless/service-paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless
  ports:
    - port: 8000
      protocol: TCP
