cluster/paperless/service-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-postgresql-service
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless-postgresql
  ports:
    - port: 5432
      protocol: TCP
