cluster/paperless/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis-service
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless-redis
  ports:
    - port: 6379
      protocol: TCP
