cluster/paperless/service-tika.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika-service
  namespace: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless-tika
  ports:
    - port: 9988
      protocol: TCP
