cluster/paperless/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-route
  namespace: paperless
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.nathanv.app`)
      kind: Rule
      services:
        - name: paperless
          port: 8000
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
